geo-30.3.0 комплексная оптимизация производительности, параллелизма и исправление ошибок. Создан агрегированный эндпоинт /me/init (профиль + подписка). Сетевое удаление и сброс сессий вынесены в асинхронные фоновые потоки. Исправлен обход кэша Spring при самовызове через внедрение @Lazy прокси. Включено прокси-сжатие GZIP и поддержка Keep-Alive для соединений с бэкендом. Удалены условные конструкции `if` из конфигурации кэширования статики.